src/tests/fixtures/field_definitions/PropertyFieldMissingType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class SomeType {
  /** @gqlField */
  someProp;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/PropertyFieldMissingType.invalid.ts:4:3 - error: Expected GraphQL field to have a type.

4   someProp;
    ~~~~~~~~
